--- a/InformationWallAndroidApp/app/src/main/res/values/color.xml
+++ b/InformationWallAndroidApp/app/src/main/res/values/color.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <item name="blue" type="color">#163F50</item>
-
+    <item name="activate" type="color">#FF9100</item>
+    #FF9100
 </resources>
