Created Business Object for Tile Black Board and did the inital design layouts and adapters

--- a/InformationWallAndroidApp/app/src/main/res/drawable/border.xml
+++ b/InformationWallAndroidApp/app/src/main/res/drawable/border.xml
@@ -66,9 +66,9 @@
             <shape android:shape="rectangle" >
                 <stroke
                     android:width="10dp"
-                    android:color="@color/activate" />
+                    android:color="@color/ci_color" />
 
-                <solid android:color="@color/activate" />
+                <solid android:color="@color/ci_color" />
             </shape>
         </rotate>
     </item>
@@ -78,7 +78,7 @@
             android:shape="rectangle">
             <stroke
                 android:width="5dip"
-                android:color="@color/activate" />
+                android:color="@color/ci_color" />
         </shape>
     </item>
 </layer-list>
