--- a/InformationWallAndroidApp/app/src/main/res/layout/black_board_ex_lv_group.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/black_board_ex_lv_group.xml
@@ -1,27 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="5">
+    android:layout_width="fill_parent"
+    android:paddingLeft="40dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
+    android:layout_height="wrap_content">
     <TextView
         android:id="@+id/tv_black_board_item_title"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:text="@string/title"
-        android:layout_weight="2"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:paddingBottom="5dp"
+        android:text="@string/black_board_no_title" />
     <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:background="@drawable/dashed_divider" />
+        style="@style/Divider" />
     <TextView
         android:id="@+id/tv_black_board_item_info"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:layout_weight="2" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/black_board_no_item_information"
+        android:gravity="bottom" />
 </LinearLayout>
