--- a/InformationWallAndroidApp/app/src/main/res/layout/black_board_ex_lv_child.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/black_board_ex_lv_child.xml
@@ -18,6 +18,7 @@
         android:id="@+id/ll_attachment_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="@dimen/black_board_ex_lv_padding"
         android:orientation="vertical"/>
 
     <View
