--- a/InformationWallAndroidApp/app/src/main/res/layout/grid_item.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/grid_item.xml
@@ -30,7 +30,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/border"/>
+            android:background="@drawable/is_activated_border"/>
         <View
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
