--- a/InformationWallAndroidApp/app/src/main/res/layout/fragment_black_board_overview.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/fragment_black_board_overview.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context="wipraktikum.informationwallandroidapp.BlackBoard.BlackBoard">
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
@@ -21,18 +22,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <!-- Fragment Container-->
-    <FrameLayout
-        android:id="@+id/black_board_fragment_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></FrameLayout>
+    <include layout="@layout/content_black_board_overview" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        app:backgroundTint="@color/ci_color"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_add_white" />
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
