--- a/InformationWallAndroidApp/app/src/main/res/values/dimens.xml
+++ b/InformationWallAndroidApp/app/src/main/res/values/dimens.xml
@@ -4,4 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="black_board_ex_lv_padding">10dp</dimen>
+
+    <!-- BlackBoard Item Add -->
+    <dimen name="black_board_add_item_label">60dp</dimen>
 </resources>
