--- a/InformationWallAndroidApp/app/src/main/res/values/styles.xml
+++ b/InformationWallAndroidApp/app/src/main/res/values/styles.xml
@@ -18,4 +18,14 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
+
+    <!-- Black Board Item Add -->
+    <style name="BlackBoardAddItemTextView">
+        <item name="android:layout_width">@dimen/black_board_add_item_label</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:paddingTop">15dp</item>
+        <item name="android:paddingBottom">15dp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
 </resources>
