--- a/InformationWallAndroidApp/app/src/main/res/layout/fragment_black_board_add_item.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/fragment_black_board_add_item.xml
@@ -1,26 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="10"
     tools:context="wipraktikum.informationwallandroidapp.BlackBoard.BlackBoard">
-    <android.support.design.widget.AppBarLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
 
     <!-- Title -->
     <TableRow
@@ -33,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
+            android:layout_weight="1"
             android:background="@android:color/transparent" />
     </TableRow>
     <View
@@ -45,12 +32,13 @@
             style="@style/BlackBoardAddItemTextView"
             android:text="@string/black_board_add_item_date" />
         <EditText
+            android:id="@+id/edit_black_board_add_item_date"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:drawableRight="@drawable/ic_event"
             android:layout_weight="1"
             android:background="@android:color/transparent" />
+
     </TableRow>
     <View
         style="@style/Divider" />
@@ -61,10 +49,11 @@
         <TextView
             style="@style/BlackBoardAddItemTextView"
             android:text="@string/black_board_add_item_creator" />
-        <EditText
+        <AutoCompleteTextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
+            android:layout_weight="1"
             android:background="@android:color/transparent" />
     </TableRow>
     <View
@@ -75,6 +64,7 @@
         android:layout_weight="1">
         <TextView
             style="@style/BlackBoardAddItemTextView"
+            android:layout_weight="1"
             android:text="@string/black_board_add_item_attachments"/>
     </TableRow>
     <View
@@ -88,6 +78,7 @@
             android:layout_height="match_parent"
             android:hint="@string/black_board_add_item_description"
             android:gravity="top"
+            android:layout_weight="1"
             android:background="@android:color/transparent" />
     </TableRow>
 
@@ -95,6 +86,7 @@
         android:id="@+id/ll_attachment_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:orientation="vertical"/>
 
 </TableLayout>
