--- a/InformationWallAndroidApp/app/src/main/res/layout/activity_black_board.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/activity_black_board.xml
@@ -7,25 +7,16 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context="wipraktikum.informationwallandroidapp.BlackBoard.BlackBoard">
-    <android.support.design.widget.AppBarLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
+    <include layout="@layout/custom_app_bar_layout"></include>
 
     <!-- Fragment Container-->
     <FrameLayout
         android:id="@+id/black_board_fragment_container"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"></FrameLayout>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="?attr/actionBarSize">
+    </FrameLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
