--- a/InformationWallAndroidApp/app/src/main/res/values/styles.xml
+++ b/InformationWallAndroidApp/app/src/main/res/values/styles.xml
@@ -2,14 +2,18 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/ci_color</item>
+        <item name="colorPrimaryDark">@color/ci_color</item>
     </style>
 
+    <!-- Devider -->
     <style name="Divider">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dp</item>
         <item name="android:background">?android:attr/listDivider</item>
     </style>
+
+    <!-- App Themes -->
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
     <style name="AppTheme.NoActionBar">
