--- a/InformationWallAndroidApp/app/src/main/res/layout/tile_item.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/tile_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <wipraktikum.informationwallandroidapp.TileOverview.GridImageView
+    <wipraktikum.informationwallandroidapp.TileOverview.CustomView.GridImageView
         android:id="@+id/picture"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
