Fixed Bug with wrong height size of description size; click on tel and email opens intent

--- a/InformationWallAndroidApp/app/src/main/res/layout/black_board_ex_lv_child.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/black_board_ex_lv_child.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="@dimen/black_board_ex_lv_padding">
+    android:paddingLeft="40dp">
 
     <TextView
         android:id="@+id/tv_black_board_item_description"
