--- a/InformationWallAndroidApp/app/src/main/res/values/color.xml
+++ b/InformationWallAndroidApp/app/src/main/res/values/color.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="ci_color" type="color">#163f50</item>
+    <item name="ci_color_dark" type="color">#F2163f50</item>
 </resources>
