--- a/InformationWallAndroidApp/app/src/main/res/layout/activity_login.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/activity_login.xml
@@ -7,12 +7,13 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingTop="56dp"
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
 
-        <ImageView android:src="@drawable/check"
+        <!--android:src="@drawable/check" -->
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="72dp"
             android:layout_marginBottom="24dp"
