--- a/InformationWallAndroidApp/app/src/main/res/layout/activity_login.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/activity_login.xml
@@ -12,13 +12,34 @@
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
 
-        <!--android:src="@drawable/check" -->
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center_horizontal"
+            android:text="Information Wall"
+            android:textColor="#218eed"
+            android:textSize="24dp" />
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center_horizontal"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="Enter your email address, password and Server URL to connect to your Information Wall!"
+            android:textColor="#9d9d9d"
+            android:textSize="16dp" />
+
+        <!--android:src="@drawable/check"
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="72dp"
             android:layout_marginBottom="24dp"
             android:layout_gravity="center_horizontal" />
-
+        -->
         <!--  Email Label -->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -58,14 +79,17 @@
                 android:hint="Server URL"/>
         </android.support.design.widget.TextInputLayout>
 
-        <android.support.v7.widget.AppCompatButton
+        <Button
             android:id="@+id/btn_login"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginBottom="28dp"
             android:padding="12dp"
-            android:text="Login"/>
+            android:background="#9d9d9d"
+            android:textColor="@android:color/white"
+            android:text="Login"
+           />
 
     </LinearLayout>
 </ScrollView>
