--- a/InformationWallAndroidApp/app/src/main/res/layout/activity_login.xml
+++ b/InformationWallAndroidApp/app/src/main/res/layout/activity_login.xml
@@ -79,6 +79,11 @@
                 android:hint="Server URL"/>
         </android.support.design.widget.TextInputLayout>
 
+        <CheckBox android:id="@+id/checkbox_autoLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cb_autoLogin" />
+
         <Button
             android:id="@+id/btn_login"
             android:layout_width="fill_parent"
